docs/all.log
+ echo 'Run gradle test'
Run gradle test
+ /usr/bin/python3 -uO /l/util.nightly/src/python/runNightlyGradleTestPrecommit.py
***USING BIG LINE FILE***
Using java from: /usr/lib/jvm/java-23-openjdk/bin/
use java command /usr/lib/jvm/java-23-openjdk/bin/java --add-modules jdk.incubator.vector -Xmx32g -Xms32g -server -XX:+UseParallelGC -Djava.io.tmpdir=/l/tmp
  gradle test log: /l/logs.nightly/ant_test/2024.11.20.lucene-tests.txt
  took: 1.8 min
  gradle precommit log: /l/logs.nightly/ant_test/2024.11.20.precommit.txt
  took: 1.0 min
+ echo 'Run lucene nightly'
Run lucene nightly
+ /usr/bin/python -uO /l/util.nightly/src/python/nightlyBench.py -run
  File "/l/util.nightly/src/python/nightlyBench.py", line 502
    if 
       ^
SyntaxError: invalid syntax
+ cp /l/logs.nightly/all.log /l/reports.nightly
